<resources>
    <string name="app_name">EVA 21 Day Challenge</string>
    <string name="title_activity_login">EVA 21 Day Challenge</string>
    <string name="recipes">Recepten</string>
    <string name="gotoChallenges">Ga naar challenges</string>
    <string name="navigation_drawer_open">Open navigatie</string>
    <string name="navigation_drawer_close">Sluit navigatie</string>
    <string name="restaurants">Restaurants</string>
    <string name="FAQ">FAQ</string>
    <string name="info">Informatie</string>
    <string name="about">Over</string>
    <string name="settings">Instellingen</string>
    <string name="evasite">www.evavzw.be</string>
    <string name="welcome">EVA 21 Day Challenge!</string>
    <string name="signIn">Aanmelden</string>
    <string name="createAccount">Nieuw account</string>
    <string name="title_activity_register">Registreren</string>
    <string name="email">Email-adres</string>
    <string name="password">Wachtwoord</string>
    <string name="confirmPassword">Bevestig paswoord</string>
    <string name="register">Registeren</string>
    <string name="title_activity_main_menu">Challenges</string>
    <string name="socialMediaLogin">Of meld aan met social media</string>
    <string name="logOut">Uitloggen</string>
    <string name="com_facebook_loginview_log_in_button_long">Log in met Facebook</string>
    <string name="title_activity_challenge">Challenge</string>
    <string name="title_categoryList">Kies een categorie</string>
    <string name="title_recipeList">Kies een recept</string>
    <string name="title_restaurantList">Kies een restaurant</string>
    <string name="ingredientsTitle">Ingrediënten</string>
    <string name="extraTitle">Extra informatie</string>
    <string name="descriptionTitle">Bereiding</string>
    <string name="UNamePwdIncorrect">Het e-mail of wachtwoord is verkeerd</string>
    <string name="couldntRetrieveErrors">Verzoek aan de server is mislukt, kan geen fouten laden</string>
    <string name="emailInvalid">Dit is geen geldig e-mail adres</string>
    <string name="emailTaken">Het e-mail is al in gebruik</string>
    <string name="error500">Er is iets verkeerd gegaan, probeer opnieuw a.u.b.</string>
    <string name="notAuthorized">Uw gebruiker is niet geauthoriseerd, probeer opnieuw in te loggen</string>
    <string name="passwordsNotEqual">Wachtwoorden komen niet overeen</string>
    <string name="close">Sluiten</string>
    <string name="viewDagen">challenges gedaan</string>
    <string name="slogan">Maakt het plantaardig</string>
    <string name="category_cooking">Koken</string>
    <string name="category_restaurant">Uit eten</string>
    <string name="category_cooking_descr">Bij deze challenge is het de bedoeling dat je iets plantaardig kookt.</string>
    <string name="category_restaurant_descr">Bij deze challenge is het de bedoeling dat je uit eten gaat en plantaardig eet.</string>
    <string name="address">Adres</string>
    <string name="properties">Gegevens</string>
    <string name="description">Beschrijving</string>
    <string name="phone">Tel.</string>
    <string name="website">Website</string>
    <string name="title_activity_profile_setup">profile_setup</string>
    <string name="age">Geboortedatum</string>
    <string name="finish">Bevestigen</string>
    <string name="givenname">Voornaam</string>
    <string name="next">Volgende</string>
    <string name="numberHousehold">Aantal gezinsleden</string>
    <string name="omnivore">Omnivoor</string>
    <string name="other">Ander</string>
    <string name="parttimeVegetarian">Deeltijds vegetariër</string>
    <string name="personalInfo">Persoonlijke info</string>
    <string name="pescetarian">Pescetariaan</string>
    <string name="prev">Vorige</string>
    <string name="review">Herzien</string>
    <string name="submit_confirm_button">Bevestigen</string>
    <string name="submit_confirm_message">Bevestigen? U kunt dit later nog aanpassen in de instellingen.</string>
    <string name="surname">Familienaam</string>
    <string name="typeOfVegetarian">Bent u vegetariër?</string>
    <string name="vegan">Veganist</string>
    <string name="vegetarian">Vegetariër</string>
    <string name="yourAge">Geboortedatum</string>
    <string name="budgetAmount">Wat is uw budget?</string>
    <string name="notShared">Niet gedeeld</string>
    <string name="large">Hoog</string>
    <string name="medium">Gemiddeld</string>
    <string name="low">Laag</string>
    <string name="allergicTo">Uw allergieën</string>
    <string name="passwoordVergeten">Wachtwoord vergeten?</string>
    <string name="selected_config">portrait</string>
    <string name="category_sugarfree">Suikervrij</string>
    <string name="category_sugarfree_descr">Bij deze challenge is het de bedoeling dat je een hele dag lang suikervrij leeft.</string>
    <string name="checkin">Checkin</string>
    <string name="menu_settings">Instellingen</string>
    <string name="title_activity_about">Over</string>
    <string name="about1">De EVA 21 dagen challenge werd ontwikkeld in naam van EVA vzw.</string>
    <string name="about2">Deze app wil mensen aanzetten om 21 dagen plantaardig te eten om hen te overtuigen om minder dierlijke producten te gebruiken en meer alternatieven te nemen.</string>
    <string name="about3">Als je meer informatie wil weten over de werking van EVA, dan kun je altijd terecht op hun website.</string>
    <string name="naarWebsite">Ga naar website</string>
    <string name="category_sugarfree_descr2">Er zijn verschillende soorten suikers en een groot aantal daarvan zijn verfijnd en bewerkt met dierlijke producten. Zo worden bijvoorbeeld resten van koeierbeenderen gebruikt om de witte kleur te geven.</string>
    <string name="category_sugarfree_descr3">We dagen je uit om een dag geen (of toch zo weinig mogelijk) suikers te eten. Dit wil zeggen dat frisdrank, snoep en dergelijke vermeden worden. </string>
    <string name="neemChallenge">Selecteer challenge</string>
    <string name="CCC">Creative Cooking</string>
    <item type="id" name="recipeTag"/>
    <item type="id" name="ingredientTag"/>
    <string name="numberOfRecipes">Aantal recepten gevonden:</string>
    <string name="verder">Naar recepten</string>
    <string name="title_activity_recipes_by_ingredient">RecipesByIngredient</string>
    <string name="action_settings">Instellingen</string>
    <string name="backToIngredients">Terug naar ingrediënten</string>
    <string name="challenges">Challenges</string>
    <string name="typeIngredient">Naam ingrediënt</string>
    <string name="loggingIn">Aan het inloggen…</string>
    <string name="viewDag">challenge gedaan</string>
    <string name="no_recipes_found">Er werden geen recepten gevonden.</string>
    <string name="no_restaurants_found">Er werden geen restaurants gevonden.</string>
    <string name="challengeHistory">Challenge geschiedenis</string>
    <string name="typeOfChallenge">Type challenge:</string>
    <string name="date">Datum:</string>
    <string name="yes">ja</string>
    <string name="no">nee</string>
    <string name="challengeDone">Challenge afgewerkt:</string>
    <string name="earnedPoints">Verdiende punten:</string>
    <string name="challenge">challenge</string>
    <string name="no_challenges_found">Er zijn geen voorgaande challenges gevonden.</string>
    <string name="no_ingredients_found">Geen ingrediënten gevonden.</string>
    <string name="badges">Badges</string>
    <string name="badgeDescriptionPlaceholder">Druk op een badge om de beschrijving te krijgen.</string>
    <string name="badgeCreatieveling">Creatieveling</string>
    <string name="badgeExplorer">Verkenner</string>
    <string name="badgeSugarrush">Suiker kick</string>
    <string name="badgeGastronoom">Gastronoom</string>
    <string name="badgeGenieter">Genieter</string>
    <string name="badgeTrotseGebruiker">Trotse gebruiker</string>
    <string name="badgeStarter">Starter</string>
    <string name="badgeDoorzetter">Doorzetter</string>
    <string name="badgeCreatievelingDescription">Gebruik zaken uit je koelkast om een recept te maken.</string>
    <string name="badgeExplorerDescription">Maak een recept uit een andere regio.</string>
    <string name="badgeSugarrushDescription">Eet een ganse dag geen suiker.</string>
    <string name="badgeGastronoomDescription">Ga 3 keer op restaurant en eet iets veganistisch.</string>
    <string name="badgeGenieterDescription">Ga voor de eerste keer naar een restaurant en eet iets veganistisch.</string>
    <string name="badgeTrotseGebruikerDescription">Vraag 10 dagen op een rij een challenge aan en voltooi hem.</string>
    <string name="badgeStarterDescription">Voltooi je eerste challenge.</string>
    <string name="badgeDoorzetterDescription">Voltooi 21 dagen.</string>
    <string name="level1">Huidig niveau: 1 (Zaadje)</string>
    <string name="level2">Huidig niveau: 2 (Wortel)</string>
    <string name="level3">Huidig niveau: 3 (Stengel)</string>
    <string name="level4">Huidig niveau: 4 (Blaadje)</string>
    <string name="level5">Huidig niveau: 5 (Knop)</string>
    <string name="level6">Huidig niveau: 6 (Bloem)</string>
    <string name="points">punten</string>
    <string name="emailRequired">E-mail is verplicht</string>
    <string name="regionRecipeDescription">Bij deze challenge moet je iets koken uit een andere regio. Selecteer eerst een regio en kook dan iets lekkers!</string>
    <string name="oosters">Oosters</string>
    <string name="afrikaans">Afrikaans</string>
    <string name="westers">Westers</string>
    <string name="zuidAmerikaans">Zuid-Amerikaans</string>
    <string name="category_regionRecipe">Regio recept</string>
    <string name="region">Regio:</string>
    <string name="finished_challenge">Klaar</string>
</resources>
