<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="evavzw.be.eva21daychallenge.activity.SignIn">

    <EditText
        android:id="@+id/email"
        android:hint="@string/email"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:inputType="textEmailAddress"/>

    <EditText
        android:id="@+id/password"
        android:hint="@string/password"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:inputType="textPassword"/>

    <Button
        android:id="@+id/signIn"
        android:text="@string/signIn"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" />
</LinearLayout>
