<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="fill_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".Login"
    android:gravity="center_horizontal"
   android:id="@+id/loginScreen"
    android:background="@drawable/achtergrond_login">

<!--
    <ImageView
        android:id="@+id/loginScreen"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />
-->

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="@style/logoPosition">
        <ImageView android:id="@+id/eva_logo"
            android:src="@drawable/eva_logo"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"/>
<!--

-->
    </LinearLayout>

<LinearLayout
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:layout_marginLeft="40dp"
    android:layout_marginRight="40dp"
    android:background="@drawable/round_corners">

    <EditText
        android:id="@+id/email"
        android:hint="@string/email"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:inputType="textEmailAddress"

        />

    <View
        android:layout_width="match_parent"
        android:layout_gravity="center"
        android:layout_height="1dp"
        android:background="#afc137" />

    <EditText
        android:id="@+id/password"
        android:hint="@string/password"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:inputType="textPassword"/>

</LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="27dp"
        android:layout_marginRight="27dp"
       >

        <Button
            android:id="@+id/signIn"
            android:text="@string/signIn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:textAllCaps="false"
            android:layout_margin="10dp"
            />
    </LinearLayout>

    <View
        android:layout_width="fill_parent"
        android:layout_marginLeft="40dp"
        android:layout_marginRight="40dp"
        android:layout_gravity="center"
        android:layout_height="1dp"
        android:background="#afc137" />

    <be.evavzw.eva21daychallenge.customComponent.LoginButton
        android:background="@drawable/facebookbutton"
        android:id="@+id/loginFacebookButton"
        android:layout_width="184dp"
        android:layout_height="37dp"
        style="@style/socialButton"/>

    <com.google.android.gms.common.SignInButton
        android:id="@+id/loginGoogleButton"
        android:layout_width="191dp"
        android:layout_height="44dp"
        style="@style/socialButton"/>

    <be.evavzw.eva21daychallenge.customComponent.TwitterButton
        android:id="@+id/loginTwitterButton"
        android:layout_width="184dp"
        android:layout_height="37dp"
        style="@style/socialButton"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center"
        android:layout_marginTop="10dp">
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/passwoordVergeten"
            android:textColor="#afc137"
            android:layout_weight="0.5"
            android:layout_gravity="center"
           />
        <TextView
            android:id="@+id/createAccount"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/createAccount"
            android:textColor="#afc137"
            android:layout_weight="0.5"
            android:layout_gravity="center"/>
    </LinearLayout>
</LinearLayout>
