<android.support.design.widget.CoordinatorLayout
    android:id="@+id/main_content"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.support.design.widget.AppBarLayout
        android:id="@+id/appbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            app:popupTheme="@style/ThemeOverlay.AppCompat.Light"/>

    </android.support.design.widget.AppBarLayout>


    <LinearLayout app:layout_behavior="@string/appbar_scrolling_view_behavior"
                  android:layout_width="match_parent"
                  android:layout_height="match_parent"
                  android:paddingLeft="@dimen/activity_horizontal_margin"
                  android:paddingRight="@dimen/activity_horizontal_margin"
                  android:paddingTop="@dimen/activity_vertical_margin"
                  android:paddingBottom="@dimen/activity_vertical_margin"
                  android:orientation="vertical"
                  >

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_marginBottom="10dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:gravity="center_horizontal"
            android:orientation="vertical"
            >

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:textColor="@color/eva_donkergroen"
                android:id="@+id/addChallenge"
                android:text="@string/neemChallenge"
                android:background="@color/eva_lichtgroen"/>

            <TextView
                android:id="@+id/sugarfree1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/category_sugarfree_descr"
                android:layout_margin="10dp"/>

            <TextView
                android:id="@+id/sugarfree2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/category_sugarfree_descr2"
                android:layout_margin="10dp"/>

            <TextView
                android:id="@+id/sugarfree3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/category_sugarfree_descr3"
                android:layout_margin="10dp"/>

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/sugar_img"

                />


        </LinearLayout>



    </LinearLayout>

</android.support.design.widget.CoordinatorLayout>