<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="be.evavzw.eva21daychallenge.activity.Register"
    android:gravity="center_horizontal"
    android:id="@+id/register_layout">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="@style/logoPosition"
        android:orientation="vertical">
        <ImageView android:id="@+id/eva_logo"
            android:src="@drawable/eva_logo"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"/>
        <Button android:layout_width="10dp"
            android:layout_height="10dp"
            android:background="@color/tw__transparent"
            android:id="@+id/hidden_button"
            android:layout_gravity="center_horizontal"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginLeft="40dp"
        android:layout_marginRight="40dp"
        android:background="@drawable/round_corners">
    <EditText
        android:id="@+id/email"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" />
        <View
            android:layout_width="match_parent"
            android:layout_gravity="center"
            android:layout_height="1dp"
            android:background="#afc137" />

    <EditText
        android:id="@+id/password"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" />
        <View
            android:layout_width="match_parent"
            android:layout_gravity="center"
            android:layout_height="1dp"
            android:background="#afc137" />

    <EditText
        android:id="@+id/confirmPassword"
        android:hint="@string/confirmPassword"
        android:inputType="textPassword"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" />
        </LinearLayout>

    <!--<RadioGroup
        android:id="@+id/geslacht"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" >
        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:text="@string/mannelijkgeslacht"/>
        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:text="@string/vrouwelijkgeslacht"/>
    </RadioGroup>-->

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="27dp"
        android:layout_marginRight="27dp"

        >

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/blaadjes_achtergrond"
        android:visibility="invisible"
        android:elevation="1dp"
        android:layout_centerInParent="true"

        />

    <Button
        android:id="@+id/register"
        android:text="@string/register"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:textAllCaps="false"
        android:stateListAnimator="@null"/>
    </RelativeLayout>
</LinearLayout>
