<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    tools:context="be.evavzw.eva21daychallenge.activity.challenges.SugarfreeChallenge">

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_marginBottom="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:paddingTop="20dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/floating"/>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/addChallenge"
            android:text="test"/>

        <TextView
            android:id="@+id/sugarfree1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/category_sugarfree_descr"
            android:layout_margin="10dp"/>

        <TextView
            android:id="@+id/sugarfree2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/category_sugarfree_descr2"
            android:layout_margin="10dp"/>

        <TextView
            android:id="@+id/sugarfree3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/category_sugarfree_descr3"
            android:layout_margin="10dp"/>

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/sugar_img"

            />


    </LinearLayout>


    <android.support.design.widget.FloatingActionButton
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"

        app:layout_anchor="@id/floating"
        app:layout_anchorGravity="center"
        android:layout_marginRight="5dp"
        android:src="@android:drawable/btn_star_big_off"
        android:clickable="true"/>

</LinearLayout>
